...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textAlignment="center"
        android:textColor="@color/lightBlue"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/login_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Hello" />-->

    <TextView
        android:id="@+id/Hello"
...
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_person_black_24dp" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:drawableBottom="@color/colorAccent"
                android:background="@android:color/transparent"
                android:elegantTextHeight="true"
...
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:src="@drawable/ic_lock_outline_black_24dp" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:background="@android:color/transparent"
                android:elegantTextHeight="true"
                android:drawableBottom="@color/colorAccent"
...
                android:paddingEnd="5dp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHighlight="@color/black" />

            <ImageView
                android:id="@+id/img_eye"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:onClick="eyeClicked"
...


    </LinearLayout>


    <ImageView
        android:id="@+id/signInbtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/arrow_next"
        android:defaultFocusHighlightEnabled="true"
        android:clickable="true"
        android:focusable="true"
...
