...
    <string name="invalid_credentials">Ooops! Invalid Credentials</string>

    <string name="url">https://confitt.herokuapp.com/api/v1/</string>
    <string name="url_speech">https://confit-speach.herokuapp.com/score_presentation/v1</string>
    <string name="facebook_app_id">785219431944359</string>
    <string name="fb_login_protocol_scheme">fb785219431944359</string>
    <string name="view_history">View Detailed History</string>

    <style name="FacebookLoginButton">
        <item name="android:background">@drawable/facebook</item>
        <item name="android:layout_marginStart">10dp</item>
        <item name="android:layout_gravity">center_horizontal</item>
    </style>
...
