...

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/viewHistoryBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@color/c1"
            android:clickable="true"
            android:focusable="true"
...
